test/sensitive-data-searcher/invalid-files/invalid.js
const a = () => {
    console.log('password')
}

var username = '5'
let password = 'beef'   // Problem
const user = 'Magic'
e = 'test'
